--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: FastLogin
 main: com.ksptooi.FL.BukkitSupport.FastLogin
-version: 0.4_D_RE
-depend: [GeneralDataCoreV5]
+version: 0.45_A
+depend: [GeneralDataCoreV6]
 commands:
     login:
     register:
@@ -9,4 +9,4 @@ commands:
     l:
     reg:
     changepassword:
-    tc:
+    
