--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="Lib/GeneralDataCoreV6.jar"/>
-	<classpathentry kind="lib" path="D:/1219索引/MineCraft Server/1.7.10[TH]/Thermos-1.7.10-1614-57-server.jar"/>
+	<classpathentry kind="lib" path="D:/1219索引/MineCraft Server/1.14.3[SG]/spigot-1.14.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
