--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="Lib/GeneralDataCoreV6.jar"/>
 	<classpathentry kind="lib" path="D:/1219索引/MineCraft Server/1.14.3[SG]/spigot-1.14.3.jar"/>
+	<classpathentry kind="lib" path="Lib/GeneralDataCoreV6.23F.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
